Overlapping text with login/signup Cards fixed

--- a/src/App.css
+++ b/src/App.css
@@ -50,13 +50,15 @@ body {
 .overlay-text {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 53.5%;
   text-shadow: 0.5px 0 0 rgba(137, 58, 58, 0.714), 0 -0.5px 0 black, 0 1px 0 rgba(137, 58, 58, 0.714), -1px 0 0 #000;
   transform: translate(-90%, -40%);
   color: rgba(173, 73, 73, 0.714);
-  font-size: 6em;
-  padding-right: 10%;
-  z-index: 10;
+  font-size: 7.5vw;
+  text-align: left;
+  white-space: normal;
+  padding-right: 35%;
+  z-index: 9;
 }
 
 /* Responsive styles */
